# sideeye

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
examples/: personal.toml.example
scripts/: capture_states.py
src/sideeye/: __init__.py  __main__.py  entry_points.py  models.py  remixer.py  scanner.py  templates.py  user_templates.py
src/sideeye/packs/: __init__.py  base.py  markdown.py  personal_info.py  prompt_safety.py  registry.py
src/sideeye/tui/: __init__.py  app.py  styles.tcss
src/sideeye/tui/widgets/: __init__.py  finding_card.py
tests/: test_pack_discovery.py  test_packs.py  test_personal_info_pack.py  test_scanner.py  test_tui_smoke.py  test_user_templates.py
