[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sideeye"
version = "0.2.0"
description = "A local text linter with pluggable rule packs. Scans prompts, markdown, and user-configured PII for documented risks. No network, no model calls."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Roberta Carraro", email = "rcarraro@gmail.com"},
]
keywords = [
    "tui", "textual", "linter", "ai-safety", "prompt-engineering",
    "redaction", "pii", "markdown", "agent", "offline", "local-first",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Security",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "textual>=8.0.0",
    "pydantic>=2.7.0",
    "pyperclip>=1.8.2",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-textual-snapshot",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "textual-dev>=1.5.0",
]

[project.scripts]
sideeye = "sideeye.entry_points:run"

[project.urls]
Homepage = "https://github.com/itchymutt/sideeye"
Repository = "https://github.com/itchymutt/sideeye"
Issues = "https://github.com/itchymutt/sideeye/issues"
Changelog = "https://github.com/itchymutt/sideeye/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/sideeye"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/ROADMAP.md",
]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Tests are allowed to have unused imports inside functions (often used for
# side-effect or to demonstrate available APIs).
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
